--- a/app/src/main/res/layout/result.xml
+++ b/app/src/main/res/layout/result.xml
@@ -22,6 +22,18 @@
             android:layout_height="wrap_content"
             android:background="#F5F5F5">
 
+            <ProgressBar
+                android:indeterminate="false"
+                android:indeterminateDrawable="@anim/progressbar_v22"
+                android:layout_height="170dp"
+                android:layout_width="170dp"
+                android:visibility="gone"
+                android:layout_centerInParent="true"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:id="@+id/pb"/>
+
             <TextView
                 android:id="@+id/textview1"
                 android:layout_width="wrap_content"
@@ -34,63 +46,75 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"/>
 
-            k<View
-                android:id="@+id/view1"
-                android:layout_width="0dp"
-                android:layout_height="250dp"
-                app:layout_constraintDimensionRatio="W,20:15"
-                app:layout_constraintTop_toBottomOf="@+id/textview1"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="20dp"
-                android:background="@drawable/shape_white_corner"/>
-
             <TextView
                 android:id="@+id/textview_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="识别结果"
-                android:textSize="30sp"
+                android:textSize="20sp"
+
                 android:textColor="@color/black"
                 app:layout_constraintTop_toBottomOf="@+id/textview1"
                 android:layout_marginTop="35dp"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginStart="30dp"
                 />
+
+            <View
+            android:id="@+id/view1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="@+id/textview_2"
+            app:layout_constraintStart_toStartOf="@id/textview_2"
+            app:layout_constraintEnd_toEndOf="@id/textview_2"
+            app:layout_constraintBottom_toBottomOf="@id/textview_2"
+            android:background="@drawable/shape_white_corner"/>
+
             <TextView
                 android:id="@+id/textview_2"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:minHeight="100dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="15dp"
                 app:layout_constraintTop_toBottomOf="@+id/textview_1"
-                app:layout_constraintStart_toStartOf="@+id/view1"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginTop="20dp"
+                android:padding="15dp"
                 android:text="识别中"
-                android:textSize="30sp"
+                android:textSize="18sp"
                 android:textColor="@color/black"
 
+                />
+
+
+
+
+
+            <TextView
+                android:id="@id/baike"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="百度百科"
+                android:textSize="20sp"
+                android:textColor="@color/black"
+                app:layout_constraintTop_toBottomOf="@+id/textview_2"
+                android:layout_marginTop="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="30dp"
                 />
 
             <View
                 android:layout_width="0dp"
                 android:layout_height="300dp"
                 app:layout_constraintDimensionRatio="W,20:18"
-                app:layout_constraintTop_toBottomOf="@+id/view1"
+                app:layout_constraintTop_toBottomOf="@+id/baike"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="30dp"
                 android:background="@drawable/shape_white_corner"/>
 
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="百度百科"
-                android:textSize="30sp"
-                android:textColor="@color/black"
-                app:layout_constraintTop_toBottomOf="@+id/view1"
-                android:layout_marginTop="45dp"
-                app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="30dp"
-                />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
