--- a/app/src/main/res/layout/result.xml
+++ b/app/src/main/res/layout/result.xml
@@ -2,6 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -20,7 +21,8 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#F5F5F5">
+            android:background="@color/gray"
+            >
 
             <ProgressBar
                 android:indeterminate="false"
@@ -41,6 +43,7 @@
                 android:text="准确率:100%"
                 android:textColor="@color/black"
                 android:textSize="23sp"
+                android:textStyle="bold"
                 android:layout_marginTop="20dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -52,13 +55,12 @@
                 android:layout_height="wrap_content"
                 android:text="识别结果"
                 android:textSize="20sp"
-
+                android:textStyle="bold"
                 android:textColor="@color/black"
                 app:layout_constraintTop_toBottomOf="@+id/textview1"
                 android:layout_marginTop="35dp"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="30dp"
-                />
+                android:layout_marginStart="30dp" />
 
             <View
             android:id="@+id/view1"
@@ -82,44 +84,50 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginTop="20dp"
                 android:padding="15dp"
-                android:text="识别中"
+                android:text="识别中..."
                 android:textSize="18sp"
                 android:textColor="@color/black" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/view1"
-                android:text="有问题？ 点我反馈..."
+                android:text="识别不准确？ 点我反馈"
                 app:layout_constraintEnd_toEndOf="@+id/view1"
                 android:textColor="@color/purple"
-                android:textSize="14sp"
+                android:textSize="16sp"
                 android:id="@+id/fanKui"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="8dp"
                 />
-
 
 
             <TextView
                 android:id="@id/baike"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="百度百科"
-                android:textSize="20sp"
-                android:textColor="@color/black"
-                app:layout_constraintTop_toBottomOf="@+id/fanKui"
-                android:layout_marginTop="20dp"
-                app:layout_constraintStart_toStartOf="parent"
+                android:layout_width="130dp"
+                android:layout_height="28dp"
                 android:layout_marginStart="30dp"
-                />
+                android:layout_marginTop="20dp"
+                android:text="百度百科"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/fanKui" />
 
-            <View
+            <TextView
                 android:layout_width="0dp"
-                android:layout_height="300dp"
-                app:layout_constraintDimensionRatio="W,20:18"
+                android:layout_height="wrap_content"
+                android:minHeight="100dp"
+                android:layout_marginEnd="15dp"
+                android:layout_marginStart="15dp"
                 app:layout_constraintTop_toBottomOf="@+id/baike"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:layout_marginTop="30dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="20dp"
+                android:text="暂无"
+                android:padding="15dp"
+                android:textColor="@color/black"
                 android:background="@drawable/shape_white_corner"/>
 
 
