--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--弧形的界面属性-->
+    <style name="AppTheme" parent="@style/Theme.SEAI">
+    </style>
+
     <declare-styleable name="ArcView">
         <attr name="arcHeight" format="dimension"/>
         <attr name="lgColor"   format="color"/>
@@ -22,4 +25,9 @@
         <item name="android:backgroundDimEnabled">true</item>
     </style>
 
+    <style name="LauncherTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowTranslucentStatus">false</item>
+        <item name="android:windowTranslucentNavigation">true</item>
+        <item name="android:windowBackground">@drawable/splash</item>
+    </style>
 </resources>
